@@ -8,6 +8,7 @@ import com.rometools.rome.feed.synd.SyndFeed;
 import com.rometools.rome.io.SyndFeedInput;
 import com.rometools.rome.io.XmlReader;
 import java.io.ByteArrayInputStream;
+import java.util.Collections;
 import lombok.extern.slf4j.Slf4j;
 import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
 import org.apache.commons.lang3.StringUtils;
@@ -15,14 +16,14 @@ import org.springframework.data.jdbc.core.JdbcAggregateTemplate;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
-import org.springframework.util.LinkedMultiValueMap;
 
 @Component
 @Slf4j
-public class RssSubscriber extends BaseService {
+class RssSubscriber extends BaseService {
     private static final String[] FEEDS = {
             "https://archiveofourown.org/tags/39926683/feed.atom",
             "https://archiveofourown.org/tags/41072152/feed.atom"
@@ -32,26 +33,26 @@ public class RssSubscriber extends BaseService {
     private final JdbcAggregateTemplate jdbcAggregateTemplate;
     private final Ao3MetadataParser ao3MetadataParser;
 
-    public RssSubscriber(RssEntryRepository rssEntryRepository, JdbcAggregateTemplate jdbcAggregateTemplate, Ao3MetadataParser ao3MetadataParser) {
+    RssSubscriber(RssEntryRepository rssEntryRepository, JdbcAggregateTemplate jdbcAggregateTemplate, Ao3MetadataParser ao3MetadataParser) {
         this.rssEntryRepository = rssEntryRepository;
         this.jdbcAggregateTemplate = jdbcAggregateTemplate;
         this.ao3MetadataParser = ao3MetadataParser;
     }
 
     @Scheduled(cron = "${swampy.schedule.rss}", zone = "${swampy.schedule.timezone}")
-    public void run() {
+    void run() {
         executorService.execute(this::refresh);
     }
 
     private void refresh() {
         log.info("Checking RSS feeds");
-        TextChannel sfwChannel = philJda.getTextChannelsByName("fic-recs", false).get(0);
-        TextChannel nsfwChannel = philJda.getTextChannelsByName("nsfw-fic-recs", false).get(0);
+        TextChannel sfwChannel = philJda.getTextChannelsByName("fic-recs", false).getFirst();
+        TextChannel nsfwChannel = philJda.getTextChannelsByName("nsfw-fic-recs", false).getFirst();
 
         for (String url : FEEDS) {
             try {
-                LinkedMultiValueMap<String, String> headers = new LinkedMultiValueMap<>();
-                headers.add(HttpHeaders.ACCEPT, "application/atom+xml");
+                HttpHeaders headers = new HttpHeaders();
+                headers.setAccept(Collections.singletonList(MediaType.APPLICATION_ATOM_XML));
                 headers.add(HttpHeaders.USER_AGENT, Constants.USER_AGENT);
                 ResponseEntity<byte[]> response = restTemplate.exchange(url, HttpMethod.GET, new HttpEntity<>(headers), byte[].class);
                 SyndFeed feed = new SyndFeedInput().build(new XmlReader(new ByteArrayInputStream(response.getBody())));
@@ -85,7 +86,7 @@ public class RssSubscriber extends BaseService {
 
                 if (initialLoad) {
                     philJda.getTextChannelsByName(Constants.TEST_CHANNEL, false)
-                            .get(0)
+                            .getFirst()
                             .sendMessage("Successfully loaded " + addedLinks + " rss entries into db from " + url)
                             .queue();
                 }
